--- a/Car-Boutique-Liera/css/style.css
+++ b/Car-Boutique-Liera/css/style.css
@@ -4,8 +4,6 @@
   height: 50px;
   border-radius: 15px;
   padding-bottom:5px;
-  margin-left: 4.5%;
-  margin-right: 4.5%; 
 }
 .nav-bar div{
   display: inline;
@@ -14,6 +12,7 @@
   font-size: 20px;
   font-weight: bolder;
   color: black;
+  font-family: 'Merriweather', serif;
   
 }
 @media (max-width: 570px) {
@@ -43,9 +42,11 @@
   font-size: 12px;
   font-weight: bolder;
   color: black;
+  font-family: 'Merriweather', serif;
 }
 /* Estilo para el fondo de Home */
 .home{
+  border-radius: 15px;
   background-image: url("../img/backgroundhome_1920.png");
   background-size: cover;
   background-repeat: no-repeat;
@@ -70,6 +71,7 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
+  font-family: 'Merriweather', serif;
 }
 
 .feed{
