--- a/Car-Boutique-Liera/css/style.css
+++ b/Car-Boutique-Liera/css/style.css
@@ -81,7 +81,7 @@
 }
 #marca{
   font-weight: bolder;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Merriweather', serif;
   font-size: 30px;
 }
 #marca, .social, #aviso{
