--- a/Car-Boutique-Liera/css/style.css
+++ b/Car-Boutique-Liera/css/style.css
@@ -4,8 +4,6 @@
   height: 50px;
   border-radius: 15px;
   padding-bottom:5px;
-  margin-left: 4.5%;
-  margin-right: 4.5%; 
 }
 .nav-bar div{
   display: inline;
@@ -14,25 +12,32 @@
   font-size: 20px;
   font-weight: bolder;
   color: black;
+  font-family: 'Merriweather', serif;
   
 }
-@media (max-width: 570px) {
+@media (min-width: 360px) {
   .nav-bar div{
     display: none;
+  }
+  .nav-bar ul{
+    position: relative;
+    right: 90%;
+    left: 20%;
   }
 }
 .nav-bar ul{
   position: absolute;
   right: 5px;
-  margin-right: 4.5%
 }
-@media (max-width: 570px) {
+@media (min-width: 740px) {
+  .nav-bar div{
+    display: none;
+  }
   .nav-bar ul{
     position: relative;
-    top: 30%;
-    bottom: 70%;
+    top: 15px;
     right: 90%;
-    left: 10%;
+    left: 30%;
   }
 }
 .nav-bar ul li{
@@ -43,6 +48,7 @@
   font-size: 12px;
   font-weight: bolder;
   color: black;
+  font-family: 'Merriweather', serif;
 }
 /* Estilo para el fondo de Home */
 .home{
@@ -51,13 +57,14 @@
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
+  border-radius: 15px;
 }
-@media (width-max:750px) {
+@media (width-max:720px) {
   .home{
     background-image: url("../img/backgroundhome_650.png");
   }
 }
-@media (width-max:1000px) {
+@media (width-max:1024px) {
   .home{
     background-image: url("../img/backgroundhome_800.png");
   }
@@ -70,6 +77,7 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
+  font-family: 'Merriweather', serif;
 }
 
 .feed{
