--- a/Car-Boutique-Liera/css/style.css
+++ b/Car-Boutique-Liera/css/style.css
@@ -15,9 +15,10 @@
   font-family: 'Merriweather', serif;
   
 }
-@media (min-width: 360px) {
+@media (-width: 535px) and (max-height: 812px) {
   .nav-bar div{
     display: none;
+    
   }
   .nav-bar ul{
     position: relative;
@@ -29,17 +30,7 @@
   position: absolute;
   right: 5px;
 }
-@media (min-width: 740px) {
-  .nav-bar div{
-    display: none;
-  }
-  .nav-bar ul{
-    position: relative;
-    top: 15px;
-    right: 90%;
-    left: 30%;
-  }
-}
+
 .nav-bar ul li{
   display: inline-block;
 }
@@ -49,6 +40,9 @@
   font-weight: bolder;
   color: black;
   font-family: 'Merriweather', serif;
+}
+@media screen {
+  
 }
 /* Estilo para el fondo de Home */
 .home{
