--- a/Car-Boutique-Liera/css/style.css
+++ b/Car-Boutique-Liera/css/style.css
@@ -15,22 +15,10 @@
   font-family: 'Merriweather', serif;
   
 }
-@media (-width: 535px) and (max-height: 812px) {
-  .nav-bar div{
-    display: none;
-    
-  }
-  .nav-bar ul{
-    position: relative;
-    right: 90%;
-    left: 20%;
-  }
-}
 .nav-bar ul{
   position: absolute;
   right: 5px;
 }
-
 .nav-bar ul li{
   display: inline-block;
 }
@@ -41,29 +29,44 @@
   color: black;
   font-family: 'Merriweather', serif;
 }
-@media screen {
-  
+
+@media (max-width: 420px){
+  .nav-bar div{
+    display: none;
+  }
+  .nav-bar ul{
+    position: relative;
+    top: 15px;
+    right: 90%;
+    left: 10%;
+  }
+  .nav-bar ul li a{
+    font-size: 50%;
+  }
 }
+@media (min-width:420px) and (max-width:535px){
+  .nav-bar div {
+    display: none;
+  }
+  .nav-bar ul {
+    position: relative;
+    top: 15px;
+    right: 80%;
+    left: 20%;
+  }
+}
+
+
+
 /* Estilo para el fondo de Home */
-.home{
+ .home{
   background-image: url("../img/backgroundhome_1920.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
   border-radius: 15px;
-}
-@media (width-max:720px) {
-  .home{
-    background-image: url("../img/backgroundhome_650.png");
-  }
-}
-@media (width-max:1024px) {
-  .home{
-    background-image: url("../img/backgroundhome_800.png");
-  }
-}
-
+ }
 /* Estilo para el texto en Home */
 .text-container{
   text-align: center;
@@ -73,20 +76,53 @@
   height: 100vh;
   font-family: 'Merriweather', serif;
 }
-
+.feedcontainer{
+  background-color: rgb(170, 247, 221);
+  background-size: 100%;
+  border-radius: 15px;
+  margin-top: 5px;
+}
 .feed{
-  display: block;
-  text-align: center;
-  bottom: -50px;
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
 }
 #marca{
+  padding: 5%;
   font-weight: bolder;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Merriweather', serif;
   font-size: 30px;
 }
-#marca, .social, #aviso{
-  width: 100%;
+#social, #aviso {
+  padding: 5%;
+  font-weight: bold;
+  font-family: 'Merriweather', serif;
+  font-size: 20px;
 }
+
+@media (max-width:420px) {
+  .home{
+    background-image: url("../img/Antique-car-movil_460px.png");
+    background-size: inherit;
+    background-attachment: inherit;
+  }
+  .text-container{
+    color:  rgb(25, 0, 252);
+  }
+  
+}
+@media (min-width:420px) and (max-width:980px) {
+  .home{
+    background-image: url("../img/backgroundhome_800.png");
+  }
+}
+@media (max-width: 680px){
+  .feed{
+    display: flex;
+    flex-direction: column;
+  }
+}
+
 
 /* EMPIEZA ABOUT US */
 /* Colocamos un fondo a la pagina */
