--- a/Car-Boutique-Liera/css/style.css
+++ b/Car-Boutique-Liera/css/style.css
@@ -233,6 +233,13 @@ para que las letras blancas se resalten y se pueda ver */
   border-radius: 15px;
   overflow: hidden;
 }
+.boxS{
+  box-shadow:  0px 1px 0px 1px rgba(0, 0, 0, 15%);
+  padding: 0;
+  border: 0;
+  border-radius: 15px;
+  overflow-x: hidden;
+}
 .contact-container{
   margin-top: 150px;
   position: block;
