--- a/Car-Boutique-Liera/css/style.css
+++ b/Car-Boutique-Liera/css/style.css
@@ -248,6 +248,7 @@ para que las letras blancas se resalten y se pueda ver */
 }
 .email-container{
   display: flex;
+  position: relative;
   flex-direction: column;
   align-items: start;
   text-align: center;
@@ -260,7 +261,7 @@ para que las letras blancas se resalten y se pueda ver */
 }
 #TextContact{
   height: 80px;
-  width: 250%;
+  width: 350%;
 }
 @media (max-width:535px){
   #TextContact{
